--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "real-estate",
-  "homepage": "https://debola23.github.io/real-estate.git",
+  "homepage": "https://Debola23.github.io/real-estate/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,10 +11,10 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
+    
   },
   "dependencies": {
     "framer-motion": "^11.11.17",
-    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
     "vite": "^5.4.10"
   }
