feat: react router

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "real-estate",
+  "homepage": "https://debola23.github.io/real-estate/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
